--- a/marketplace/equipmentinfo.html
+++ b/marketplace/equipmentinfo.html
@@ -21,7 +21,7 @@
 <body>
 
 <form action="equipmentinfo.php" method="GET">
-    <h3>Columns in EqipmentUses table are:</h3>
+    <h3>Columns in EquipmentUses table are:</h3>
     EquipmentID
     </br>
     ServiceID
